# qr-code-creator

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
src/qr_code_creator/: main.py
